Add all fixes apart from centering

--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -81,11 +81,13 @@ body {
 	height: 100%;
 	inset: 32px 0 0 200px;
 	overflow: auto;
-    display: flex; /* Use flexbox */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
     text-align: center; /* Center text content */
 	background: #6c757d;
+}
+
+#canvas-container {
+	position: absolute;
+	margin:	auto; 
 }
 
 
