--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -81,13 +81,9 @@ body {
 	height: 100%;
 	inset: 32px 0 0 200px;
 	overflow: auto;
-    text-align: center; /* Center text content */
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center horizontally */
 	background: #6c757d;
-}
-
-#canvas-container {
-	position: absolute;
-	margin:	auto; 
 }
 
 
