--- a/tasks/templates/test.html
+++ b/tasks/templates/test.html
@@ -77,14 +77,43 @@
         </div>
     </div>
 
-    <div id="thumbnailView" style="display: block;">
-        <div id="thumbnailsContainer" role="tablist" aria-label="Thumbnail Tabs">
-            <div class="thumbnailContainer" role="tab" data-page="1" aria-selected="true">
-                <canvas width="108" height="139" class="thumbnailCanvas"></canvas>
-                <span class="pageNumberElement">1</span></div>
-            <div class="thumbnailContainer" role="tab" data-page="2" aria-selected="false">
-                <canvas width="108" height="139" class="thumbnailCanvas"></canvas>
-                <span class="pageNumberElement">2</span></div>
+    <!--Sidebar testing-->
+    <div>
+        <div id="sidebarToolbar">
+            <!-- Sidebar Toolbar View Buttons -->
+            <button id="viewThumbnails" class="toolbarButton toggled" title="View Thumbnails">
+                <i class="fa-solid fa-grip-vertical"></i>
+            </button>
+            <button id="viewOutline" class="toolbarButton toggled" title="View Outline">
+                <i class="fa-solid fa-bars-staggered"></i>
+            </button>
+            <button id="viewComments" class="toolbarButton toggled" title="View Comments">
+                <i class="fa-regular fa-message"></i>
+            </button>
+            <button id="viewBookmarks" class="toolbarButton toggled" title="View Bookmarks">
+                <i class="fa-regular fa-bookmark"></i>
+            </button>
+        </div>
+        <div id="sidebarViews">
+            <div id="thumbnailView">
+                <div id="thumbnailsContainer" role="tablist" aria-label="Thumbnail Tabs">
+                    <div class="thumbnailContainer" role="tab" data-page="1" aria-selected="true">
+                        <canvas width="108" height="139" class="thumbnailCanvas"></canvas>
+                        <span class="pageNumberElement">1</span></div>
+                    <div class="thumbnailContainer" role="tab" data-page="2" aria-selected="false">
+                        <canvas width="108" height="139" class="thumbnailCanvas"></canvas>
+                        <span class="pageNumberElement">2</span></div>
+                </div>
+            </div>
+            <div id="outlineView"></div>
+
+            <div id="commentView">
+                <p id="testComment">TEST</p>
+            </div>
+
+            <div id="bookmarksView">
+                <h3>This is the bookmark view</h3>
+            </div>
         </div>
     </div>
 </div>
@@ -92,4 +121,6 @@
 <script src="{% static 'js/process_notification_delete.js' %}"></script>
 <script src="{% static 'js/set_notifications_read.js' %}"></script>
 <script src="{% static 'js/test/test_notifications.js' %}"></script>
+<script src="{% static 'js/viewer_sidebar.js' %}"></script>
+<script src="{% static 'js/test/test_viewer_sidebar.js' %}"></script>
 </body>
