--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -7,11 +7,11 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: hidden;
 }
 
 body {
     background-color: white;
+	overflow: hidden;
 }
 
 #outerContainer {
@@ -22,6 +22,7 @@ body {
 #mainContainer {
     position: absolute;
     inset: 0;
+	overflow: auto;
 }
 
 /* Sidebar */
@@ -78,12 +79,15 @@ body {
 /* Viewer */
 #viewer {
 	position: absolute;
-	height: 100%;
 	inset: 32px 0 0 200px;
 	overflow: auto;
     display: flex; /* Use flexbox */
     justify-content: center; /* Center horizontally */
 	background: #6c757d;
+}
+#canvasContainer
+{
+	margin: auto;
 }
 
 
