--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -42,7 +42,23 @@
 				<div id="outlineView"></div>
 
 				<div id="commentView">
-                    <p id="testComment">TEST</p>
+                    <p id="testComment">Select a mark to leave a comment</p>
+					<div id="voiceRecordContainer">
+						<div id="voiceRecord">
+							<div id="playCircle">
+								<i id="play" class="fas fa-play" title="Start Recording"></i>
+							</div>
+							<div title="Recording...">
+								<div class="animation-block block-1"></div>
+								<div class="animation-block block-2"></div>
+								<div class="animation-block block-3"></div>
+							</div>
+						</div>
+						<div id="recordings"></div>
+						<div id="saveContainer">
+							<button id="save" style="display: none;">Save Comments</button>
+						</div>
+					</div>
                 </div>
 
 				<div id="bookmarksView">
